# everest

./: .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md  build.sh  dev.notes  editor_run.sh  game_run.sh  imgui.ini  run.sh
.github/workflows/: cmake-multi-platform.yml
assets/scenes/: physics2d.everest  physicstest2d.everest  pool_game.everest  scene.everest  scene2.everest  scene2.evsc
assets/scripts/: GameManager.lua  Player.lua  SerializeTest.lua  hole.lua  test.lua
assets/shaders/: batchedShader.glsl  circleShader.glsl  editor_batchedShader.glsl  editor_circleShader.glsl  gridShader.glsl  quadShader.glsl  textureshader.glsl
docs/: Build.md  ECS.md  Guide.md  Install.md  ProgrammingAPI.md  ScriptingAPI.md  Setup.md
everest-assets/: Everest.project
everest-assets/layouts/: default.ini
everest-assets/scenes/: default.everest
everest-assets/shaders/: editor_quadShader.glsl  gridShader.glsl  lineShader.glsl  quadShader.glsl  textureshader.glsl
everest-editor/: CMakeLists.txt
everest-editor/src/: editorlayer.cpp  editorlayer.h  everest-editor.cpp  main.cpp
everest-editor/src/editor/: contentBrowserPanel.cpp  contentBrowserPanel.h  editorAssets.cpp  editorAssets.h  editorcamera.cpp  editorcamera.h  gizmos.cpp  gizmos.h  menupanel.cpp  menupanel.h  projectSettings.cpp  projectSettings.h  propspanel.cpp  propspanel.h  sceneSequence.cpp  sceneSequence.h  sceneheirarchy.cpp  sceneheirarchy.h  scenepanel.cpp  scenepanel.h  statspanel.cpp  statspanel.h
everest-engine/: CMakeLists.txt
everest-engine/include/: everest.h  pch.h  window.h
everest-engine/include/core/: application.h  core.h  dbghelper.h  debuglayer.h  entry.h  guilayer.h  input.h  instrumentor.h  keycode.h  layer.h  layerstack.h  log.h  project_serializer.h  time.h  uifontmanager.h  utils.h  window.h
everest-engine/include/events/: event.h  keyevent.h  mouseevent.h  windowevent.h
everest-engine/include/math/: matrix.h  random.h  types.h  utils.h  vec.h
everest-engine/include/physics/: aabbtree.h  aabbtree2d.h  colliders.h  colliders2d.h  collision.h  collisionDetector.h  collisionResolver.h  phyconfig.h  physicsworld.h  raycast.h  rigidbody.h  rigidbody2d.h  springJoint.h
everest-engine/include/renderer/: buffer.h  circleRenderer.h  framebuffer.h  renderAPI.h  renderer.h  renderer2d.h  shader.h  sprite.h  spriteRenderer.h  texture.h  vao.h
everest-engine/include/scene/: camera.h  component_type.h  components.h  def_components.h  entity.h  orthocamController.h  perscamController.h  scene.h  scenemanager.h  scriptable.h  serializer.h  yaml_extensions.h
everest-engine/include/scripting/: components_lua.h  evscript.h  extended_types.h  input_lua.h  typeregistry.h
everest-engine/include/utils/: assetsManager.h  utils.h  uuid.h
everest-engine/src/: aabbtree.cpp  aabbtree2d.cpp  application.cpp  assetsManager.cpp  buffer.cpp  camera.cpp  colliders2d.cpp  collisionDetector.cpp  collisionResolver.cpp  components.cpp  components_lua.cpp  core.cpp  debuglayer.cpp  entry.cpp  event.cpp  evscript.cpp  extended_types.cpp  framebuffer.cpp  guilayer.cpp  input.cpp  input_lua.cpp  keyevent.cpp  layer.cpp  layerstack.cpp  log.cpp  math_utils.cpp  matrix.cpp  mouseevent.cpp  orthocamController.cpp  perscamController.cpp  physicsworld.cpp  project_serializer.cpp  random.cpp  renderAPI.cpp  renderer.cpp  renderer2d.cpp  rigidbody.cpp  rigidbody2d.cpp  scene.cpp  scenemanager.cpp  (+16 more)
examples/: CMakeLists.txt  Everest.project
examples/assets/scenes/: pool_game.everest  scene.everest
examples/assets/scripts/: SerializeTest.lua  hole.lua  test.lua
examples/src/: main.cpp
scripts/linux/: build_editor.sh  build_examples.sh  install.sh  install_dependencies.sh  run_editor.sh
scripts/macos/: build_editor.sh  build_examples.sh  install_dependencies.sh  run_editor.sh  run_examples.sh
scripts/windows/: build_editor.ps1  install_dependencies.ps1  run_editor.ps1
tower-defense/: CMakeLists.txt
tower-defense/src/: docktest.h  main.cpp  sandbox2d.cpp  sandbox2d.h  towerdefense.cpp  towerdefense.h
